--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@
 buildscript {
     ext {
         compose_version = '1.2.0-alpha06'
-        accompanist_version = '0.24.4'
+        accompanist_version = '0.24.4-alpha'
         kotlin_version = '1.6.10'
+        nav_version = "2.4.1"
     }
     repositories {
         google()
@@ -12,6 +13,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
