--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,18 @@ android {
         }
     }
 
+    signingConfigs {
+        release {
+            storeFile file("${rootDir}/test.jks")
+            storePassword "$KEY_ALIAS"
+            keyAlias "$KEY_PASSWORD"
+            keyPassword "$STORE_PASSWORD"
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -67,6 +77,8 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     implementation('com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6')
+
+    implementation("io.coil-kt:coil-compose:2.0.0-rc02")
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
