--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     implementation('com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6')
+    implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:4.3.2'
 
     implementation("io.coil-kt:coil-compose:2.0.0-rc02")
 
