--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,22 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Insetsexamples.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/Theme.Insetsexamples.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".compose.samples.basic_list.ListSampleActivity"/>
+        <activity android:name=".compose.samples.gestures.GestureExclusionSampleActivity"/>
+        <activity android:name=".compose.samples.gestures.MandatoryGestureSampleActivity"/>
+        <activity
+            android:name=".compose.samples.keyboard.KeyboardBasicImeSampleActivity"
+            android:windowSoftInputMode="adjustResize"
+            />
+        <!--android:windowSoftInputMode="adjustResize"-->
+        <activity android:name=".compose.samples.fullscreen.FullscreenCutoutSampleActivity"/>
     </application>
 
 </manifest>
