--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".compose.samples.basic_list.ListSampleActivity"/>
+        <activity android:name=".compose.samples.gestures.GestureExclusionSampleActivity"/>
+        <activity android:name=".compose.samples.gestures.MandatoryGestureSampleActivity"/>
+        <activity android:name=".compose.samples.keyboard.KeyboardBasicImeSampleActivity"/>
+        <activity android:name=".compose.samples.keyboard.KeyboardScrollImeSampleActivity"/>
+        <activity android:name=".compose.samples.fullscreen.FullscreenCutoutSampleActivity"/>
+        <activity android:name=".compose.samples.fullscreen.FullscreenStableSampleActivity"/>
     </application>
 
 </manifest>
